syntax = "proto3";

package v1;

import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/kube-orchestra/maestro/api/v1";

message Resource {
  string id = 1;
  string consumerId = 2;
  int64 generationId = 3;
  google.protobuf.Struct object = 4;
  google.protobuf.Struct status = 5;
}

message ResourceReadRequest {
  string id = 1;
}

message ResourceCreateRequest {
  string consumerId = 1;
  google.protobuf.Struct object = 2;
}

message ResourceUpdateRequest {
  string id = 1;
  google.protobuf.Struct object = 2;
}

message ResourceDeleteRequest {
  string id = 1;
}

service ResourceService {
  rpc Read(ResourceReadRequest) returns (Resource) {
    option (google.api.http) = {
      get: "/v1/resources/{id}"
    };
  }

  rpc Create(ResourceCreateRequest) returns (Resource) {
    option (google.api.http) = {
      post: "/v1/consumers/{consumerId}/resources"
      body: "object"
    };
  }

  rpc Update(ResourceUpdateRequest) returns (Resource) {
    option (google.api.http) = {
      put: "/v1/resources/{id}"
      body: "object"
    };
  }

  rpc Delete(ResourceDeleteRequest) returns (Resource) {
    option (google.api.http) = {
      delete: "/v1/resources/{id}"
    };
  }
}
